// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommentInfoItem tests is a basic snapshot 1`] = `
<button
  class="text-neutral-800 dark:text-dark-neutral-800 enabled:hover:text-neutral-700 dark:enabled:hover:text-dark-neutral-900 enabled:active:text-neutral-600 dark:enabled:active:text-dark-neutral-1000 font-medium "
>
  test item
</button>
`;

exports[`CommentInfoItem tests is a snapshot with an element in the form of a link 1`] = `
<a
  class="text-neutral-800 dark:text-dark-neutral-800 enabled:hover:text-neutral-700 dark:enabled:hover:text-dark-neutral-900 enabled:active:text-neutral-600 dark:enabled:active:text-dark-neutral-1000 font-medium "
  href="/"
>
  test item
</a>
`;
